--- a/styles/base.css
+++ b/styles/base.css
@@ -1,33 +1,3 @@
-/* 
-body {
-    margin: 0 auto;
-    font-family: 'Montserrat';
-    background-color:aliceblue;
-    grid-template-columns: repeat(10, 1fr);
-    grid-template-rows: repeat(10, 1fr);
-}
-
-header {
-    text-align: center;
-    background-color: #0c2ec4d1;
-}
-h1{
-    grid-row: 5/10;
-    grid-column: 0/2;
-}
-
-nav {
-    text-align: center;
-}
-
-main {
-   text-align: center; 
-}
-footer{
-    text-align: center;
-    background-color: #0c2ec4d1;
-
-} */
 @import url('https://fonts.googleapis.com/css2?family=Gloock&family=Montserrat:wght@300&display=swap');
 
 body {
@@ -35,6 +5,10 @@ body {
   color: #333; /* Set your preferred text color */
   line-height: 1.6;
   margin: 0;
+  
+}
+h1 { 
+  padding-left: 25px;
 }
 
 /* Center the main element horizontally with limited width */
@@ -50,6 +24,7 @@ header {
   display: flex;
   /* align-items: center; */
   /* margin-left: 20px; */
+  background-color: #78DDFF;
 }
 
 /* Style navigation */
@@ -101,6 +76,7 @@ img {
     /* grid-row: 1/5;
     grid-column: 0/2; */
     /* display: inline-block; */
-    margin-left: 450px;
+    margin-left: 500px;
+    padding-left: 50px;
     text-align: center;
-}  
+}   
