--- a/styles/base.css
+++ b/styles/base.css
@@ -5,8 +5,6 @@ body {
   color: #333; /* Set your preferred text color */
   line-height: 1.6;
   margin: 0;
-
-  
 }
 h1 { 
   padding-left: 25px;
@@ -51,11 +49,24 @@ header h1 {
   justify-content: center;
   align-items: center;
 }
-/* Style navigation */
-nav {
-  background-color: #348888; /* Set your preferred background color */
+
+#menu::before {
+  content: "☰";
+}
+#menu.open::before {
+  content: "❎";
+}
+.navigation {
+  background-color: #348888;
   padding: 10px;
   text-align: center;
+  display: flex;
+	flex-direction: column;
+	list-style: none;
+	color: #fff;
+}
+.open a {
+	display: block;
 }
 
 nav ul {
@@ -66,17 +77,26 @@ nav ul {
 }
 
 nav li {
-  display: inline;
+  display: none;
   margin-right: 15px;
 }
-
+.open li {
+  display: inline;
+}
 nav a {
   color: #FFF; /* Set your preferred link color */
   text-decoration: none;
   font-weight: bold;
   margin-right: 20px;
+  display: block;
+  flex: 1 1 100%;
 }
 
+nav a:hover {
+	background-color: #969696;
+	color: #333;
+	font-weight: 700;
+}
 /* Style main sections using CSS Grid */
 main {
   display: grid;
