--- a/styles/larger.css
+++ b/styles/larger.css
@@ -12,4 +12,12 @@
     footer {
         grid-column: 1 / 3;
     }
+    #menu {
+        display: none; /* hide hamburger button */
+    }
+    nav li {
+        display: inline;
+    }
 }
+
+
