started creating the home page to the chamber website.

--- a/lesson03/styles/site-plan.css
+++ b/lesson03/styles/site-plan.css
@@ -26,7 +26,9 @@ Fonts are separated by a | */
   --nav-hover-background-color: #FFCAB1;
 }
 
-
+p {
+  justify-content: center;
+}
 /*  Look around below...but DON'T CHANGE ANYTHING! */
 
 body {
