--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -1,9 +1,27 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@600&display=swap');
 header {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr  ;
     background-color: #968E85;
     padding: .2rem;
     border-radius: 15px;
+}
+body { 
+    background-color: white;
+}
+.dark-mode {
+    background-color: black;
+    color: white;
+}
+button {
+    border-radius: 1rem;
+    width: 200px;
+    font-size: 20px;
+    position: relative;
+    left: 70%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
 img {
     width: 300px;
@@ -25,18 +43,103 @@ a:hover {
     margin-top: 20px;
 
 }
-.section2 {
+main {
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
-h2 {
-    font-size: 30px;
+
+.section2 {
+    background-color: #ECDCB0;
+    border-radius: 1rem;
+    margin: 10px;
+    padding-bottom: 25px;
+
+} 
+.section2 p {
+    padding-left: 15px;
+    font-size: 20px;
+    font-family: "roboto slab";
+    font-weight: 300;
+    font-size: 18px;
+}
+.section2 img {
+    height: auto;
+    padding-left: 350px;
     
+}
+h1 {
+    font-family: "roboto slab";
+    font-weight: 600;
+    font-size: 30px;
+}
+h2 {
+    font-size: 25px;
+    text-align: center;
+    font-family: "roboto slab";
+    font-weight: 600;
+    font-size: 30px;
+
 }
 /* hr {
 
 } */
-.section2 p {
-    grid-column: 1/3;
+.section3 {
+    grid-column: 2/3;
+    background-color: #FFCAB1;
+    border-radius: 1rem;
+    margin: 10px;
+}
+.section3 p {
+    padding-left: 15px;
+    font-size: 20px;
+    font-family: "roboto slab";
+    font-weight: 300;
+    font-size: 18px;
+}
+h3 { 
+    text-align: center;
+    font-size: 25px;
+    font-family: "roboto slab";
+    font-weight: 600;
+    font-size: 30px;
+}
+footer {
+    background-color: #C1D7AE;
+    border-radius: 1rem;
+    /* padding-left: 15px; */
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.socials {
+    display: flex;
+    align-items: center;
     
+}
+h4 {
+    font-size: 30px;
+    padding-left: 15px;
+    font-family: "roboto slab";
+    font-weight: 600;
+    font-size: 30px;
+}
+h5 {
+    font-size: 30px;
+    padding-top: -50px;
+    font-family: "roboto slab";
+    font-weight: 600;
+    font-size: 30px;
+}
+.section5 {
+    font-size: 20px;
+}
+.section5 p {
+    font-family: "roboto slab";
+    font-weight: 300;
+    font-size: 18px;
+}
+footer .socials img {
+    padding: 5px;
+    width: 50px;
+    height: 50px;
 }
