--- a/styles/base.css
+++ b/styles/base.css
@@ -101,6 +101,8 @@ nav a:hover {
 main {
   display: grid;
   gap: 20px;
+  max-width: 670px;
+	margin: 0 auto;
 }
 
 .card {
@@ -117,10 +119,36 @@ footer {
   background-color: #F8F9FA; /* Set your preferred footer background color */
 }
 
-img {
+header img {
     width: 130px;
     height: 100px;
-    margin-left: 500px;
     padding-left: 50px;
     text-align: center;
 }   
+/* picture img {
+  width: 50%;
+  max-width: 50%;
+  height: auto;
+} */
+#hero {
+  margin: 10px auto;
+	position: relative;
+	border: 1px solid rgba(0,0,0,.1);
+	/* height: 300px; */
+}
+#herolabel {
+  position: absolute;
+	top: 20px;
+	left: 20px;
+	background: radial-gradient(#fff, #259145);
+	border: 1px solid rgba(0,0,0,.75);
+	padding: 1.5rem;
+	box-shadow: 0 0 3rem #fff;
+	opacity: 0.75;
+}
+#hero img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+
+}
