--- a/styles/base.css
+++ b/styles/base.css
@@ -125,11 +125,6 @@ header img {
     padding-left: 50px;
     text-align: center;
 }   
-/* picture img {
-  width: 50%;
-  max-width: 50%;
-  height: auto;
-} */
 #hero {
   margin: 10px auto;
 	position: relative;
@@ -138,7 +133,7 @@ header img {
 }
 #herolabel {
   position: absolute;
-	top: 20px;
+	bottom: 20px;
 	left: 20px;
 	background: radial-gradient(#fff, #259145);
 	border: 1px solid rgba(0,0,0,.75);
@@ -150,5 +145,10 @@ header img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-
+  
+}
+picture img {
+  width: 100%;
+  max-width: 100%;
+  height: auto;
 }
