--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -37,13 +37,13 @@ a:hover {
     background-color: #ECDCB0;
 }
 
-.hero {
+/* .hero {
     width: 97%;
     height: 750px;
     margin-left: 20px;
     margin-top: 20px;
 
-}
+} */
 main {
     display: grid;
     grid-template-columns: 1fr 1fr;
