--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -44,7 +44,7 @@ a:hover {
     margin-top: 20px;
 
 } */
-main {
+.mainsection {
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
@@ -145,3 +145,65 @@ footer .socials img {
     width: 50px;
     height: 50px;
 }
+
+/* Discover Page */
+div p {
+    text-align: center;
+    font-size: 30px;
+}
+div li {
+    text-align: center;
+    font-size: 20px;
+}
+figcaption {
+    display: block;
+    float: center;
+    width: 30%;
+    text-align: center;
+    font-style: italic;
+    font-size: smaller;
+    text-indent: 0;
+    margin: 0.5em;
+    padding: 0.5em;
+    padding-left: 200px;
+    padding-right: 200px;
+}
+.sidebar {
+    display: grid;
+    grid-template-columns: 1fr 1fr
+}
+.sidebar img {
+    grid-column: 2/3;
+    width: 50%;
+    height: auto; 
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+  
+}
+
+.sidebar2 {
+    grid-column: 1/1;
+}
+    
+.sidebar3 {
+    grid-column: 1/1;
+}
+.img1 { 
+    /* grid-column: 1/3; */
+}
+
+.sidemessage {
+    width: 250px;
+    background-color: #f4f4f4;
+    padding: 20px;
+    border-right: 1px solid #ccc;
+    height: 100vh;
+}
+
+#message {
+    font-size: 18px;
+    line-height: 1.5;
+}
+
