--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -207,3 +207,51 @@ figcaption {
     line-height: 1.5;
 }
 
+/* Join Page */
+form {
+    max-width: 400px;
+    margin: 20px auto;
+    padding: 20px;
+    background-color: #ffffff;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+label {
+    display: block;
+    margin-bottom: var(--label-margin-bottom);
+}
+
+input[type="text"],
+input[type="password"],
+input[type="email"],
+input[type="range"],
+input[type="submit"] {
+    width: calc(100% - (var(--input-padding) * 2));
+    padding: var(--input-padding);
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    box-sizing: border-box;
+}
+
+input[type="range"] {
+    width: 100%;
+}
+
+input[type="submit"] {
+    background-color: var(--button-background);
+    color: var(--button-color);
+    cursor: pointer;
+}
+
+input[type="submit"]:hover {
+    background-color: #ECDCB0;
+}
+
+output {
+    display: inline-block;
+    margin-left: 10px;
+}
+
+
