--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -180,7 +180,11 @@ figcaption {
     margin-left: auto;
     margin-right: auto;
     margin-top: 50px;
+    
   
+}
+figure img:hover {
+    box-shadow: 0 0 50px #333;
 }
 
 .sidebar2 {
@@ -190,9 +194,7 @@ figcaption {
 .sidebar3 {
     grid-column: 1/1;
 }
-.img1 { 
-    /* grid-column: 1/3; */
-}
+
 
 .sidemessage {
     width: 250px;
