--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -125,13 +125,13 @@ h4 {
     font-weight: 600;
     font-size: 30px;
 }
-h5 {
+/* h5 {
     font-size: 30px;
     padding-top: -50px;
     font-family: "roboto slab";
     font-weight: 600;
     font-size: 30px;
-}
+} */
 .section5 {
     font-size: 20px;
 }
@@ -157,7 +157,7 @@ div li {
 }
 figcaption {
     display: block;
-    float: center;
+    /* float: center; */
     width: 30%;
     text-align: center;
     font-style: italic;
