updated my weather section on my home page

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -283,3 +283,8 @@ output {
     grid-gap: 20px;
 }
 
+/* banner css */
+#banner-content{
+    display: flex;
+    justify-content: space-between;
+}
