--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -3,7 +3,7 @@
 header {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr  ;
-    background-color: #968E85;
+    background-color: #BAD7F2;
     padding: .2rem;
     border-radius: 15px;
 }
@@ -11,30 +11,62 @@ body {
     background-color: white;
 }
 .dark-mode {
-    background-color: black;
+    background-color: #2D2D34;
     color: white;
+}
+#menu::before {
+    content: "☰";
+}
+  #menu.open::before {
+    content: "❎";  
+}
+.hamburger {
+    display: none; /* Hide by default for larger screens */
 }
 button {
     border-radius: 1rem;
     width: 200px;
+    height: 30px;
     font-size: 20px;
     position: relative;
     left: 70%;
     top: 50%;
     transform: translate(-50%, -50%);
 }
+.join {
+    position: relative;
+    left: 150px;
+}
+
+.join a {
+    color: inherit;
+    text-decoration: inherit;
+}
 header img {
     width: 300px;
     height: 100px;
+}
+.navigation {
+    display: flex;
+    justify-content: space-between;
 }
 .navigation li {
     display: inline-block;
     margin: 10px;
     font-size: 25px;
     flex-direction: row;
+    color: #2D2D34;
 }
+.navigation ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    color: #2D2D34;
+}
+
 a:hover {
-    background-color: #ECDCB0;
+    background-color: white;
+    border-radius: .5rem;
 }
 
 /* .hero {
@@ -48,9 +80,16 @@ a:hover {
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
-
+.section1 img {
+    display: block;
+    padding-top: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    height: 100%;
+}
 .section2 {
-    background-color: #ECDCB0;
+    background-color: #FB9F89;
     border-radius: 1rem;
     margin: 10px;
     padding-bottom: 25px;
@@ -66,10 +105,20 @@ a:hover {
 .section2 img {
     width: 200px;
     height: 200px;
-    padding-left: 350px;
+    padding-left: 300px;
+    padding-right: 25px;
     
 }
+.section3 {
+    background-color: #6FD08C;
+    border-radius: 1rem;
+    margin: 10px;
+    padding-bottom: 25px;
+    grid-row: 1/3;
+    text-align: center;
+}
 h1 {
+    text-align: center;
     font-family: "roboto slab";
     font-weight: 600;
     font-size: 30px;
@@ -82,12 +131,16 @@ h2 {
     font-size: 30px;
 
 }
-/* hr {
-
-} */
+h3 { 
+    text-align: center;
+    font-size: 25px;
+    font-family: "roboto slab";
+    font-weight: 600;
+    font-size: 30px;
+}
 #weather-info {
     grid-column: 2/3;
-    background-color: #FFCAB1;
+    background-color: #57C4E5;
     border-radius: 1rem;
     margin: 10px;
 
@@ -99,40 +152,43 @@ h2 {
     font-size: 18px;
     text-align: center;
 }
-h3 { 
-    text-align: center;
-    font-size: 25px;
-    font-family: "roboto slab";
-    font-weight: 600;
-    font-size: 30px;
-}
 footer {
-    background-color: #C1D7AE;
+    background-color: #BAD7F2;
     border-radius: 1rem;
     /* padding-left: 15px; */
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
+footer p {
+    flex-direction: column;
+    padding-left: 25px;
+}
 .socials {
     display: flex;
     align-items: center;
-    
+}
+.socials img:hover {
+    transform: scale(1.1);
+    box-shadow: 0 0 50px #333;
+    background-color: #2D2D34;
 }
 h4 {
+    text-align: center;
     font-size: 30px;
     padding-left: 15px;
     font-family: "roboto slab";
     font-weight: 600;
     font-size: 30px;
 }
-/* h5 {
+h5 {
+    text-align: center;
     font-size: 30px;
     padding-top: -50px;
     font-family: "roboto slab";
     font-weight: 600;
     font-size: 30px;
-} */
+}
 .section5 {
     font-size: 20px;
 }
@@ -148,6 +204,14 @@ footer .socials img {
 }
 
 /* Discover Page */
+#visit-message {
+    font-size: 25px;
+    font-weight: bold;
+    color: #333;
+    margin-top: 10px;
+    text-align: center;
+}
+
 div p {
     text-align: center;
     font-size: 30px;
@@ -181,11 +245,11 @@ figcaption {
     margin-left: auto;
     margin-right: auto;
     margin-top: 50px;
-    
-  
 }
-figure Zaimg:hover {
+figure img:hover  {
+    transform: scale(1.1);
     box-shadow: 0 0 50px #333;
+
 }
 
 .sidebar2 {
@@ -211,6 +275,23 @@ figure Zaimg:hover {
 }
 
 /* Join Page */
+.join-page {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding-top: 20px;
+    padding-bottom: 20px;
+
+}
+#membership-info {
+    padding-bottom: 20px;
+    padding-top: 10px;
+    background-color: #FFCAB1;
+    border-radius: 1rem;
+}
+#membership-info ul {
+    font-size: 20px;
+
+}
 form {
     max-width: 400px;
     margin: 20px auto;
@@ -268,8 +349,19 @@ output {
     padding: 10px;
     border-radius: 5px;
     align-items: center;
-
+    display: inline-block;
+    max-width: 100%; /* Adjust maximum width as needed */
+    overflow: hidden;
+    text-overflow: ellipsis; /* Truncate text if it overflows */
 }
+ .member-item a {
+    display: inline-block;
+    max-width: 100%; /* Adjust maximum width as needed */
+    overflow: hidden;
+    text-overflow: ellipsis; /* Truncate text if it overflows */
+    white-space: nowrap; /* Prevent text from wrapping */
+ }
+
 
 .member-item img {
     display: block;
@@ -287,4 +379,13 @@ output {
 #banner-content{
     display: flex;
     justify-content: space-between;
+}
+.close {
+    cursor: pointer;
+    font-size: 50px;
+    font-family: "roboto slab";
+}
+.close:hover {
+    box-shadow: 0 0 50px #333;
+    background-color: inherit;
 }
