--- a/styles/base.css
+++ b/styles/base.css
@@ -84,7 +84,7 @@ nav li {
   display: inline;
 }
 nav a {
-  color: #FFF; /* Set your preferred link color */
+  color: #FFF; 
   text-decoration: none;
   font-weight: bold;
   margin-right: 20px;
