--- a/BountifulFoods/styles/base.css
+++ b/BountifulFoods/styles/base.css
@@ -15,8 +15,15 @@ body {
     background-color: #f8f8f8;
     color: #333;
 }
+
+.hero {
+    background-image: url('../images/mango-smoothie-Large.webp');
+    background-size: cover;
+    background-position: top;
+    background-repeat: no-repeat;
+}
 .behind-hero {
-    background-color: #ffefef;
+    /* background-color: #ffefef; */
     width: 100%;
 }
 .nav-header {
@@ -45,7 +52,7 @@ body {
 .nav-links li a {
     color: #fff;
     text-decoration: none;
-    color: rgb(255, 48, 48);
+    color:#5C5649;
     font-size:1.5em;
     font-weight: bold;
     text-align: center;
@@ -68,29 +75,29 @@ body {
 h1 {
     font-size: 3em;
     margin-bottom: 10px;
-    color: rgb(255, 48, 48);
+    color:#5C5649;
 }
 h2 {
     margin: 20px;
     text-align: center;
-    color: #ffe2e2	;
+    color: #5C5649	;
 }
 h3 {
     text-align: center;
-    color: rgb(255, 48, 48);	;
+    color:#5C5649;
 
 }
 h4 {
-    color: rgb(30, 30, 30);
+    color:#5C5649;
 }
 header p {
-    color: rgb(255, 48, 48);
+    color:#5C5649;
 
 }
 
 p {
     font-size: 1.2em;
-    color: rgb(255, 48, 48);;
+    color:#5C5649;
 }
 
 
@@ -222,7 +229,7 @@ select.fruit-dropdown {
 #form-submit {
     width: 100%;
     background-color: #ffefef ;
-    color: rgb(255, 48, 48);
+    color:#5C5649;
     padding: 10px;
     border: none;
     border-radius: 5px;
@@ -232,4 +239,61 @@ select.fruit-dropdown {
 
 #form-submit:hover {
     background-color: #ffeac2;
-    border-radius: 1rem;}
+    border-radius: 1rem;
+}
+/* about page */
+
+.about-us {
+    background: #ffefef;
+    padding: 20px;
+    border-radius: 5px;
+    margin-top: 2rem;
+}
+
+.about-us h1 {
+    color: #5C5649;
+    text-align: center;
+    font-size: 3em; /* Adjust font size */
+    margin-bottom: 20px; /* Adjust margin bottom */
+}
+
+.about-us p {
+    color: #5C5649;
+    font-size: 1.2em; /* Adjust font size */
+    margin-bottom: 20px; /* Adjust margin bottom */
+}
+
+.about-images {
+    display: flex;
+    justify-content: center; /* Center the images horizontally */
+    align-items: center; /* Center the images vertically */
+    margin-top: 20px; /* Add space from the text */
+}
+
+.about-images img {
+    max-width: 50%; /* Adjust image width */
+    max-height: 100%;
+    height: auto;
+    margin: 0 10px; /* Add space between images */
+    border-radius: 5px; /* Add border radius */
+}
+.about-images img:hover {
+    opacity: 0.6;
+    transition: opacity  0.3s ease-in-out;
+}
+.image-container {
+    margin: 0 10px; /* Add space between images */
+    border-radius: 5px; /* Add border radius */
+
+}
+
+
+.google-map {
+    text-align: center;
+}
+
+.google-map h2 {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
