--- a/BountifulFoods/styles/base.css
+++ b/BountifulFoods/styles/base.css
@@ -132,13 +132,16 @@ p {
     background-color: #333;
     color: #fff;
     border: none;
-    padding: 10px 20px;
+    padding: 20px 30px 20px 30px;
+    font-size: 20px;
     border-radius: 5px;
     justify-content: center;
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
-
+.button-container {
+    text-align: center; /* Center align the content */
+}
 #drinks-ordered {
     margin-top: 1rem;
     font-size: 130px;
